[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "11"
path = "src/bin/day1/part1.rs"
[[bin]]
name = "12"
path = "src/bin/day1/part2.rs"

[[bin]]
name = "21"
path = "src/bin/day2/part1.rs"
[[bin]]
name = "22"
path = "src/bin/day2/part2.rs"

[[bin]]
name = "31"
path = "src/bin/day3/part1.rs"
[[bin]]
name = "32"
path = "src/bin/day3/part2.rs"

[[bin]]
name = "41"
path = "src/bin/day4/part1.rs"
[[bin]]
name = "42"
path = "src/bin/day4/part2.rs"

[[bin]]
name = "51"
path = "src/bin/day5/part1.rs"
[[bin]]
name = "52"
path = "src/bin/day5/part2.rs"

[[bin]]
name = "61"
path = "src/bin/day6/part1.rs"
[[bin]]
name = "62"
path = "src/bin/day6/part2.rs"

[[bin]]
name = "71"
path = "src/bin/day7/part1.rs"
[[bin]]
name = "72"
path = "src/bin/day7/part2.rs"

[[bin]]
name = "81"
path = "src/bin/day8/part1.rs"
[[bin]]
name = "82"
path = "src/bin/day8/part2.rs"

[[bin]]
name = "91"
path = "src/bin/day9/part1.rs"
[[bin]]
name = "92"
path = "src/bin/day9/part2.rs"

[[bin]]
name = "101"
path = "src/bin/day10/part1.rs"

[dependencies]
